<resources>
    <string name="app_name">PPC</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
...
    <string name="text_comma">,</string>
    <string name="text_pattern_clean">APAGAR</string>
    <string name="text_pattern_update">ATUALIZAR DADOS</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
    <string name="text_title_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_status_started">Aparelho sem configurações iniciais.</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_title_password">SENHA</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
...
    <string name="text_item_harvester">COLHEDORA: %1$s</string>
    <string name="text_item_operator">OPERADOR: %1$s</string>
    <string name="text_item_front">FRENTE: %1$s</string>
    <string name="text_item_turn">TURNO: %1$s</string>
    <string name="text_item_no_sample">NÃO CONTÉM AMOSTRAS</string>
    <string name="text_item_desc_sample">CONTÉM %1$s AMOSTRA(S)</string>
    <string name="text_pattern_insert">INSERIR</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_title_auditor">MATRICULA AUDITOR %1$s</string>
    <string name="text_field_empty">CAMPO VAZIO! POR FAVOR, PREENCHA O CAMPO \"%1$s\" PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="text_input_data_invalid">DADO INVÁLIDO! POR FAVOR, VERIFIQUE SE O CAMPO \"%1$s\" FOI DIGITADO CORRETAMENTE OU ATUALIZE OS DADOS PARA VERIFICAR SE OS MESMOS NÃO ESTÃO DESATUALIZADOS.</string>
    <string name="text_title_date">DATA</string>
    <string name="text_item_turn_1">TURNO 1</string>
    <string name="text_item_turn_2">TURNO 2</string>
    <string name="text_item_turn_3">TURNO 3</string>
    <string name="text_title_turn">TURNO</string>
    <string name="text_title_os">NRO OS</string>
    <string name="text_input_data_non_existent">\"%1$s\" INEXISTENTE! POR FAVOR, VERIFIQUE SE O CAMPO FOI DIGITADO CORRETAMENTE.</string>
    <string name="text_check_data">CHECANDO \"%1$s\" NO WEB SERVICE</string>
...
